Maintain url when accept cookies and fix z-index

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -73,7 +73,7 @@ body {
   pointer-events: none;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 100;
 
   p {
     font-size: $small-font-size;
